<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="textEnd"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/eight"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button9" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/five"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/zero"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
        app:layout_constraintEnd_toStartOf="@+id/buttonDot" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/four"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/two"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/one"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/seven"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/dot"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/del"
        android:textSize="8sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/minus"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/nine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/three"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/divide"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/six"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/multiply"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/add"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/power"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonAdd"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/clear"
        android:textSize="10sp"
        app:backgroundTint="#DD2000"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/equals"
        android:textSize="10sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/negate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:maxWidth="52dip"
        android:minWidth="52dip"
        android:text="@string/negate"
        android:textSize="8sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/newNumber"
        app:layout_constraintEnd_toStartOf="@+id/newNumber"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="op" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        android:gravity="end" />

</androidx.constraintlayout.widget.ConstraintLayout>